# weld-java

./: .gitignore  Cargo.toml  LICENSE  README.md  build.gradle  settings.gradle
docker/cross/: config
docker/linux/: Dockerfile
gradle/wrapper/: gradle-wrapper.properties
src/main/java/weld/: ByteBufferUtils.java  Platform.java  WeldConf.java  WeldError.java  WeldException.java  WeldJNI.java  WeldManaged.java  WeldModule.java  WeldObject.java  WeldStruct.java  WeldValue.java  WeldVec.java
src/main/java/weld/types/: PrimitiveType.java  StructType.java  Type.java  VecType.java
src/main/rust/: lib.rs  utf8lib.rs
src/main/scala/weld/: Platform.scala  Resources.scala  Weld.scala  WeldConf.scala  WeldContext.scala  WeldDict.scala  WeldError.scala  WeldJNI.scala  WeldManaged.scala  WeldModule.scala  WeldObject.scala  WeldPointerWrapper.scala  WeldStruct.scala  WeldValue.scala  WeldVec.scala  types.scala
src/main/scala/weld/expressions/: DSL.scala  DescBuilder.scala  Expr.scala  binaryOps.scala  unaryExprs.scala
src/native/include/: weld_WeldJNI.h  weld_WeldJNI__.h
src/test/java/weld/: WeldTests.java
src/test/scala/weld/expressions/: ExprTests.scala
