[package]
name = "weld_java"
version = "0.2.0"
authors = ["Herman van Hovell <hvanhovell@databricks.com>"]

[dependencies]
libc = "0.2.0"
weld = { path = "/Users/shoumikpalkar/work/weld" }
jni = { git = "https://github.com/prevoty/jni-rs" }
regex = "*"

[lib]
path = "src/main/rust/lib.rs"
crate-type = ["cdylib", "rlib"]
bench = false
